mocked api with some todos.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,32 @@
           }
         }
       }
+    },
+    {
+      "label": "Run JSON Server",
+      "type": "shell",
+      "command": "json-server",
+      "args": ["--watch", "api/db.json"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": {
+        "owner": "json",
+        "fileLocation": ["relative", "${workspaceFolder}"],
+        "pattern": {
+          "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error)\\s+-\\s+(.*)$",
+          "file": 1,
+          "line": 2,
+          "column": 3,
+          "severity": 4,
+          "message": 5
+        }
+      }
     }
   ]
 }
