--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
     "json-server": "^1.0.0-alpha.19",
+    "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@ngrx/schematics": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
